# mesh-editor

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
data/shaders/: projection_fragment_shader.glsl  projection_vertex_shader.glsl  screen_fragment_shader.glsl
src/: camera.cpp  camera.h  window.cpp  window.h
src/assets/: asset.h  object3d.cpp  object3d.h  texture.cpp  texture.h
src/core/: command.h  event.h
src/core/command/: create_scene_object_command.cpp  create_scene_object_command.h  select_edge_command.cpp  select_edge_command.h  select_face_command.cpp  select_face_command.h  select_vertex_command.cpp  select_vertex_command.h  translate_face_command.cpp  translate_face_command.h  translate_mesh_command.cpp  translate_mesh_command.h  translate_vertex_command.cpp  translate_vertex_command.h
src/core/event/: reposition_gizmo_event.h  scene_rendered_event.h
src/core/listener/: reposition_gizmo_listener.h  scene_rendered_listener.h
src/core/math/: transform.h
src/core/state/: edge_selection_state.h  face_selection_state.h  gizmo_matrix_state.h  mesh_selection_state.h  vertex_selection_state.h
src/managers/: asset_manager.h  command_manager.cpp  command_manager.h  event_manager.h  scene_manager.cpp  scene_manager.h
src/primitives/: cone.cpp  cone.h  cube.cpp  cube.h  grid.cpp  grid.h  plane.cpp  plane.h  sphere.cpp  sphere.h  torus.cpp  torus.h
src/systems/: base_system.h  gui_system.cpp  gui_system.h  input_system.cpp  input_system.h  render_system.cpp  render_system.h
src/types/: mesh.cpp  mesh.h  model.cpp  model.h  vertex.h
src/util/: geom.h  shader.cpp  shader.h  singleton.h
